--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
                 <a href="https://zapper.xyz/event/ethereum/0x4e952d8af18041ae725f5ed8cd951c8b0717340a0f0ce374bfdeea73c50b5b66" target="_blank" class="button">Present</a>
             </div>
         </div>
+        <div id="package" class="package">
+            <div id="openedPackage" class="hidden"> <!-- This is the new div -->
+                <div class="buttons">
+                    <a href="..." target="_blank" class="button">Wallet</a>
+                    <a href="..." target="_blank" class="button">Present</a>
+                </div>
+            </div>
+        </div>
         <!-- Add animal images here -->
     </div>
     <script src="script.js"></script>
