--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="title">Elias' first website!!</div>
     <div class="container">
         <div id="package" class="package">
             <div id="openedPackage" class="hidden"> <!-- This is the new div -->
