--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby's Interactive Page</title>
     <link rel="stylesheet" href="style.css">
+    <!-- existing head content -->
+    <meta name="description" content="Elias' first interactive website for kids.">
+    <meta property="og:title" content="Elias' First Website">
+    <meta property="og:description" content="A fun and interactive way for kids to learn and play.">
+    <meta property="og:image" content="URL_to_your_image">
+    <meta property="og:type" content="website">
+    <!-- other meta tags -->
 </head>
 <body>
-    <div class="title">Elias' first website!!</div>
+    <div class="title">Eliase Esimene Veebileht!!</div>
     <div class="container">
         <div id="package" class="package">
             <div id="openedPackage" class="hidden"> <!-- This is the new div -->
                 <div class="buttons">
-                <a href="https://zapper.fi/account/0x610F644006dB9EA1bf2b9Dba49C1c45EF3432a3D" target="_blank" class="button">Wallet</a>
-                <a href="https://zapper.xyz/event/ethereum/0x4e952d8af18041ae725f5ed8cd951c8b0717340a0f0ce374bfdeea73c50b5b66" target="_blank" class="button">Present</a>
+                <a href="https://app.zerion.io/0x3d9efa647abcdf0effa20adb3edf333a748bda41/overview" target="_blank" class="button">Wallet</a>
+                <a href="https://etherscan.io/tx/0xe60e0d479e45ee68941124ee5bd764feece8b62f352ca910c1505906aabc4380" target="_blank" class="button">Gift</a>
             </div>
         </div>
         <!-- Add animal images here -->
